@@ -134,8 +134,8 @@ enum {
 	DISABLE_MELEE = 39,
 	NPC_CHASE_DISTANCE = 40,
 	ALLOW_TO_TANK = 41,
-	MAX_SPECIAL_ATTACK = 42
-	
+	IGNORE_ROOT_AGGRO_RULES = 42,
+	MAX_SPECIAL_ATTACK = 43
 };
 
 typedef enum {	//fear states
